changes with respect to design mostly css

--- a/src/static_in_pro/our_static/css/navbar-static-top.css
+++ b/src/static_in_pro/our_static/css/navbar-static-top.css
@@ -20,3 +20,34 @@
 	background-color: #44B78B;
 	color: #083524;
 }
+
+.btn-primary, .btn-primary:active:hover, .btn-primary:focus{
+	background-color: #0C4B33;
+	border-color: #0C4B33;
+}
+
+.btn-primary:hover{
+	background-color: #0C4B33;
+	border-color: #0C4B33;
+	color: #44B78B;
+}
+
+.navbar-default .navbar-nav>li>a{
+    color: #44B78B;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+	color: #fff;
+}
+
+.btn-default{
+	background-color: #44B78B;
+	border-color: #44B78B;
+	color: #0C4B33;
+}
+
+.btn-default:hover{
+	background-color: #44B78B;
+	border-color: #44B78B;
+	color: #fff;
+}
