--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -46,7 +46,7 @@
                   <div class="form-group">
                     <input type="password" class="form-control" name="password" placeholder="password">
                   </div>
-                  <button type="submit" class="btn btn-primary">Login</button>
+                  <button type="submit" class="btn btn-default">Login</button>
                 </form>
               </li>
             {% else %}
